force-app/main/default/objects/SecondaryOrder__c/SecondaryOrder__c.object-meta.xml
<CustomObject>
    <label>Secondary Order</label>
    <nameField>
        <label>Secondary Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Secondary Orders</pluralLabel>
    <searchStatus>Inactive</searchStatus>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>