force-app/main/default/objects/SecondaryOrder__c/fields/AppliedPromosJSON__c.field-meta.xml
<CustomField>
    <fullName>AppliedPromosJSON__c</fullName>
    <label>AppliedPromosJSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>