force-app/main/default/objects/SecondaryOrder__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributor Orders</relationshipLabel>
    <relationshipName>DistributorOrders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>