force-app/main/default/objects/SecondaryOrder__c/fields/ExternalRef__c.field-meta.xml
<CustomField>
    <fullName>ExternalRef__c</fullName>
    <externalId>true</externalId>
    <label>External Ref</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>