force-app/main/default/objects/SecondaryOrder__c/fields/RequestedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>RequestedDeliveryDate__c</fullName>
    <label>RequestedDeliveryDate</label>
    <type>Date</type>
</CustomField>