force-app/main/default/objects/SecondaryOrder__c/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <label>Retailer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Secondary Orders</relationshipLabel>
    <relationshipName>SecondaryOrders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>