force-app/main/default/objects/SecondaryOrder__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restrictedPicklist>true</restrictedPicklist>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>True</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
                <default>False</default>
                <label>Confirmed</label>
            </value>
            <value>
                <fullName>Delivered</fullName>
                <default>False</default>
                <label>Delivered</label>
            </value>
            <value>
                <fullName>Invoiced</fullName>
                <default>False</default>
                <label>Invoiced</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>