force-app/main/default/objects/SecondaryOrder__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Secondary Orders</relationshipLabel>
    <relationshipName>SecondaryOrders</relationshipName>
    <type>Lookup</type>
</CustomField>