force-app/main/default/objects/SecondaryOrder__c/validationRules/Distributor_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Distributor_Required</fullName>
    <active>true</active>
    <description>Distributor is required for all secondary orders</description>
    <errorConditionFormula>ISBLANK(Distributor__c)</errorConditionFormula>
    <errorMessage>Distributor is required for secondary orders</errorMessage>
</ValidationRule>