force-app/main/default/objects/SecondaryOrder__c/validationRules/NetAmount_Non_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>NetAmount_Non_Negative</fullName>
    <active>true</active>
    <description>Net Amount must be non-negative</description>
    <errorConditionFormula>NOT(ISBLANK(NetAmount__c)) &amp;&amp; NetAmount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>NetAmount__c</errorDisplayField>
    <errorMessage>Net Amount must be non-negative</errorMessage>
</ValidationRule>