force-app/main/default/objects/SecondaryOrder__c/validationRules/NetAmount_NonNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>NetAmount_NonNegative</fullName>
    <active>true</active>
    <description>Net amount must be non-negative</description>
    <errorConditionFormula>NetAmount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>NetAmount__c</errorDisplayField>
    <errorMessage>Net amount cannot be negative</errorMessage>
</ValidationRule>